# RustBlocks

./: Cargo.toml  LICENSE  README.md  build.rs
android/: AndroidManifest.xml
docs/: Error Handling and Best Practices.md  Project Structure Overview.md  Roaddmap.md  Roadmap.md  Tech Stack.md
src/: lib.rs  main.rs  utils.rs
src/game/: mod.rs  states.rs
