[package]
name = "rustblocks"
version = "0.1.0"
edition = "2021"
authors = ["Prakrut Rajesh"]
description = "A super lightweight yet visually beautiful Tetris game focused on Android"
license = "MIT"

[dependencies]
macroquad = { version = "0.4.3", default-features = false }
kira = { version = "0.8.7", default-features = false, features = ["cpal"] }
log = "0.4.20"
env_logger = "0.10.1"
rand = "0.8.5"

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = "0.7.0"

lyon = "1.0.1"
tiny-skia = "0.8.3"
egui = "0.22.0"
egui-macroquad = { version = "0.15.0", default-features = false }

[lib]
name = "rustblocks_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "rustblocks"
path = "src/main.rs"

[package.metadata.android]
package_name = "com.prakrut.rustblocks"
label = "RustBlocks"
version_code = 1
icon = "@mipmap/ic_launcher"
target_sdk_version = 33
min_sdk_version = 24
build_targets = ["aarch64-linux-android", "armv7-linux-androideabi"]
resources = "android/res"
assets = "assets"
fullscreen = true