[package]
name = "rustblocks"
version = "0.1.0"
edition = "2021"
authors = ["Prakrut Rajesh"]
description = "A super lightweight yet visually beautiful Tetris game focused on Android"
license = "MIT"

[lib]
name = "rustblocks_lib"  # Keep this for Android
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]  # For Android compatibility

[[bin]]
name = "rustblocks"       # Keep this for desktop
path = "src/main.rs"

[dependencies]
# Core game framework
macroquad = { version = "0.4.3", default-features = false }
kira = { version = "0.8.7", default-features = false, features = ["cpal"] }
log = "0.4.20"
env_logger = "0.10.1"
rand = "0.8.5"

# Graphics libraries
lyon = "1.0.1"
tiny-skia = "0.8.3"

# UI framework
egui = "0.22.0"
egui-macroquad = { version = "0.15.0", default-features = false }

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = "0.7.0"

[package.metadata.android]
package_name = "com.prakrut.rustblocks"
label = "RustBlocks"
icon = "@mipmap/ic_launcher"
target_sdk_version = 36
min_sdk_version = 24
build_targets = ["aarch64-linux-android", "armv7-linux-androideabi"]
resources = "android/res"
assets = "assets"
fullscreen = true

# This is crucial - specify that we want to build an APK
apk_name = "rustblocks"