[package]
name = "rustblocks"
version = "0.1.0"
edition = "2021"
authors = ["Prakrut Rajesh"]
description = "A lightweight yet visually beautiful Tetris game for desktop"
license = "MIT"

[dependencies]
# Core game engine
bevy = { version = "0.12", features = ["dynamic_linking", "wayland"] }

# Graphics enhancements
lyon = "1.0.1"

# Audio enhancements
bevy_kira_audio = "0.18"

# UI enhancements
bevy_egui = "0.23"

# Development tools
bevy-inspector-egui = { version = "0.21", optional = true }

# Utilities
rand = "0.8.5"
log = "0.4.20"

[features]
default = []
dev = ["bevy-inspector-egui"]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy)
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true